--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CESSDNA</title>
+    <title>CRESSDNA</title>
   </head>
 
   <body>
-    <h1>Circular Eukaryotic Single Stranded DNA</h1>
+    <h1>Circular Rep-Encoding Single Stranded DNA Viruses</h1>
+    <p>Part of the <a href='http://www.nsf.gov/pubs/2010/nsf10513/nsf10513.htm'>National Science Foundation's Assembling the Tree of Life</a>.</p>
+    <img src='nsf1.jpg' alt='Sponsored with a Grant from the National Science Foundation'>
   </body>
 </html>
