--- a/CRESSresults.html
+++ b/CRESSresults.html
@@ -43,7 +43,7 @@ Currently included in the training data:<br>
 			</ul>
 		<li>Smacovirus</li>
 	
-	<a href="./www/html/CRESSdna.html">Return to CRESSdna.org</a>
+	<a href="./www/html/index.html">Return to CRESSdna.org</a>
 </p>	
 
 </body>
