--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ div.tab button.active {
 
 <div id="Taxonomy" class="tabcontent">
   <h3>Taxonomy</h3>
-  <form action="./cgi-bin/classifier.py" method="post"><br>
+  <form action="bin/classifier.py" method="post"><br>
 	<textarea rows="4" cols="50" name="fasta" input type="submit">
 >Demo
 MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHIEKAKGTDQQNKEYCSKEGHILIECGAPRNQGKRSDLSTAYFDYQQSGPPGMVLLNCCPSCRSSLSEDYYFAILEDCWRTINGGTRRPI</textarea>
