Revised Folder contents and classifier code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <style>
-* {box-sizing: border-box}
+*{box-sizing: border-box;}
 body {font-family: "Lato", sans-serif;}
 /* Style the tab */
 div.tab {
@@ -64,7 +64,7 @@ div.tab button.active {
 
 <div id="Taxonomy" class="tabcontent">
   <h3>Taxonomy</h3>
-  <form action="bin/classifier.py" method="post"><br>
+  <form action="./bin/classifier.py" method="post"><br>
 	<textarea rows="4" cols="50" name="fasta" input type="submit">
 >Demo
 MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHIEKAKGTDQQNKEYCSKEGHILIECGAPRNQGKRSDLSTAYFDYQQSGPPGMVLLNCCPSCRSSLSEDYYFAILEDCWRTINGGTRRPI</textarea>
