Cleaned up classifier html output

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ div.tab button.active {
 <div id="Taxonomy" class="tabcontent">
   <h3>Taxonomy</h3>
   <form action="./bin/classifier.py" method="post"><br>
-	<textarea rows="4" cols="50" name="fasta" input type="submit">
->Demo
+  <textarea rows="4" cols="50" name="fasta" input type="submit">>Demo
 MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHIEKAKGTDQQNKEYCSKEGHILIECGAPRNQGKRSDLSTAYFDYQQSGPPGMVLLNCCPSCRSSLSEDYYFAILEDCWRTINGGTRRPI</textarea>
 			<br>
 		<input type="reset">
