Updated to use new classfier
Updated link to post input data to the new classifier. The list of  Famillies and Genera in the classifier model is updated.

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Type Species: <i>Banana bunchy top virus</i> (<a href="https://www.ncbi.nlm.nih.
 
 <div id="Classifier" class="tabcontent">
   <h3>Classifier</h3>
-  <form action="./bin/classifier.py" method="post"><br>
+  <form action="./bin/classifier2.py" method="post"><br>
   <textarea rows="4" cols="50" name="fasta" input type="submit">>Demo
 MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHIEKAKGTDQQNKEYCSKEGHILIECGAPRNQGKRSDLSTAYFDYQQSGPPGMVLLNCCPSCRSSLSEDYYFAILEDCWRTINGGTRRPI</textarea>
 			<br>
@@ -254,7 +254,7 @@ MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHI
 			<li>Gemykibivirus</li>
 			<li>Gemykolovirus</li>
 			<li>Gemykrogvirus</li>
-			<li>Gemyvongvirus</li>
+			<li><strike>Gemyvongvirus</strike></li>
 			</ul>
 		<li>Geminiviridae</li>
 			<ul>
@@ -267,7 +267,15 @@ MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHI
 			<li>Mastrevirus</li>
 			<li>Turncurtovirus</li>
 			</ul>
-		<li>Smacovirus</li>
+		<li>Smacoviridae</li>
+			<ul>
+			<li>Huchismacovirus</li>
+			<li>Porprismacovirus</li>
+			</ul>
+		<li>Bacilladnaviridae</li>		
+			<ul>
+			<li>Protobacilladnavirus</li>
+			</ul>
 </ul>  		</p>
 </div>
 
