added CRESS ProtTest3 page and link

--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@ body {font-family: "Lato", sans-serif;}
 				<li><a href="#" class="tablinks" onclick="openTab(event, 'Classifier')">Run the classifier</a></li>
 				<li><a href="#" class="tablinks" onclick="openTab(event, 'Results')" id="defaultOpen">Results</a></li>
 		</ul>
-	</li>	
+	</li>
+    <li><a href="#" class="tablinks" onclick="openTab(event, 'Resources')">Resources</a></li>
     <li><a href="#" class="tablinks" onclick="openTab(event, 'Contributers')">Contributers</a></li>	
- 	<li><a href="#" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
+    <li><a href="#" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
 	
 </ul>
 
@@ -277,6 +278,12 @@ MPSKKSGPQPHKRWVFTLNNPSEEEKNKIRELPISLFDYFVCGEEGLEEGRTAHLQGFANFAKKQTFNKVKWYFGARCHI
 			<li>Protobacilladnavirus</li>
 			</ul>
 </ul>  		</p>
+</div>
+
+<div id="Resources" class="tabcontent">
+  <h3>Resources</h3>
+  <p><a href="https://github.com/elavington/CRESS-DNA-virus-classification/blob/master/ProtTest_withCRESS.zip">ProtTest3 with CRESS DNA virus model</a></p>
+	<p>ProtTest3 with a CRESS DNA virus based substitution matrix developed by Lele Zhao.</p>
 </div>
 
 <div id="Contributers" class="tabcontent">
